--- a/circle.yml
+++ b/circle.yml
@@ -17,5 +17,5 @@ deployment:
     branch: /^.*/
     commands:
       - ./lein uberjar
-      - mv target/* $CIRCLE_ARTIFACTS/
-      - ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME v1.0.$CIRCLE_BUILD_NUM $CIRCLE_ARTIFACTS/ || true
+      - mv target/*.jar $CIRCLE_ARTIFACTS/
+      - ghr -t "$GITHUB_TOKEN" -u "$CIRCLE_PROJECT_USERNAME" -r "$CIRCLE_PROJECT_REPONAME" "v1.0.$CIRCLE_BUILD_NUM" $CIRCLE_ARTIFACTS/ || true
