--- a/circle.yml
+++ b/circle.yml
@@ -14,8 +14,8 @@ test:
     - ./lein cloverage
 deployment:
   uberjar:
-    branch: /^master$/
+    tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - ./lein uberjar
-      - mv target/*.jar $CIRCLE_ARTIFACTS/
-      - ghr -t "$GITHUB_TOKEN" -u "$CIRCLE_PROJECT_USERNAME" -r "$CIRCLE_PROJECT_REPONAME" "v1.0.$CIRCLE_BUILD_NUM" $CIRCLE_ARTIFACTS/ || true
+      - mv target/*standalone.jar $CIRCLE_ARTIFACTS/
+      - ghr -t "$GITHUB_TOKEN" -u "$CIRCLE_PROJECT_USERNAME" -r "$CIRCLE_PROJECT_REPONAME" "$(ls target/ | grep standalone | awk -F'-' '{print $2}')" $CIRCLE_ARTIFACTS/ || true
